kleine Korrektur an Einleitung

--- a/0a_Abschlussbericht/src/einleitung.tex
+++ b/0a_Abschlussbericht/src/einleitung.tex
@@ -1,5 +1,4 @@
 \chapter{Einleitung}
-
 Die vorliegende Arbeit wurde im Rahmen des Aerobotics-Seminars im Sommersemester 2021 an der Universität Stuttgart verfasst. 
 Ziel des Projekts war die Identifikation der Parameter eines linearisierten Modells der Längsbewegung aus vorliegenden 
 Flugmessdaten eines 1:3-Modells des Flugzeugs \textit{e-Genius}. Für die Seitenbewegung wurde ebenfalls eine 
@@ -11,6 +10,5 @@ wurde die \textit{Output Error}-Methode in Verbindung mit einem \textit{Newton-R
 
 Linearisierte Modelle spielen eine wichtige Rolle in der Regelungstechnik: Mit ihnen lässt sich eine lineare Regelung um 
 einen stationären Arbeits- bzw. Trimmpunkt entwickeln. Eine Schwierigkeit besteht dabei aber immer wieder darin, die 
-Regelstrecke mit dem Modell ausreichend genau zu beschreiben. Hier kommt die Systemidentifikation ins Spiel: Sie hat zum Ziel 
-aus gegebenen Flugmessdaten die Parameter des definierten Modells bestmöglich abzuschätzen.
-
+Regelstrecke mit dem Modell ausreichend genau zu beschreiben. Hier kommt die Systemidentifikation ins Spiel: Sie hat zum 
+Ziel, anhand gegebener Flugmessdaten die Parameter des definierten Modells bestmöglich abzuschätzen.
