kleine Korrektur Einleitung

--- a/0a_Abschlussbericht/src/einleitung.tex
+++ b/0a_Abschlussbericht/src/einleitung.tex
@@ -11,4 +11,4 @@ wurde die \textit{Output Error}-Methode in Verbindung mit einem \textit{Newton-R
 Linearisierte Modelle spielen eine wichtige Rolle in der Regelungstechnik: Mit ihnen lässt sich eine lineare Regelung um 
 einen stationären Arbeits- bzw. Trimmpunkt entwickeln. Eine Schwierigkeit besteht dabei aber immer wieder darin, die 
 Regelstrecke mit dem Modell ausreichend genau zu beschreiben. Hier kommt die Systemidentifikation ins Spiel: Sie hat zum 
-Ziel, anhand gegebener Flugmessdaten die Parameter des definierten Modells bestmöglich abzuschätzen.
+Ziel, ausgehend von gegebenen Flugmessdaten die Parameter des definierten Modells bestmöglich abzuschätzen.
