Zusammenfuehrung Adam und Flo

--- a/0a_Abschlussbericht/src/bibfile.bib
+++ b/0a_Abschlussbericht/src/bibfile.bib
@@ -47,3 +47,17 @@
 	publisher = {John Wiley & Sons, Inc.},
 	isbn = {0-471-04000-2}
 }
+
+@booklet{Mandry2021,
+	title = {Modul 5: Kleinste Fehlerquadrate für eine Matrixgleichung: Matrix-LSQ},
+	institution = {Universität Stuttgart, Institut für Flugmechanik und Flugregelung},
+	year = {2021},
+	author = {Nicolas Mandry}
+}
+
+@booklet{Gschwandtner2019,
+	title = {Bestimmung eines Pilotenmodells mit Flugmessdaten aus einem UL-Helikopter},
+	institution = {Universität Stuttgart, Institut für Flugmechanik und Flugregelung},
+	year = {2019},
+	author = {Florian Gschwandtner}
+}
