--- a/0a_Abschlussbericht/src/zeitbereich.tex
+++ b/0a_Abschlussbericht/src/zeitbereich.tex
@@ -1,5 +1,5 @@
 \chapter{Systemidentifikation im Zeitbereich}
-\todo[inline]{kurze Einleitung schreiben}
+Systemidentifikation im Zeitbereich heißt, ein Modell und den zugehörigen Parametersatz zu finden, welches den zeitlichen Verlauf möglichst gut approximiert. Grundlegend ist hier zwischen der Systemidentifikation und der Parameteridentifikation zu unterscheiden. Systemidentifikation bedeutet, dass auch das Modell als unbekannt angenommen wird und die gesamte Struktur aus den Messdaten geschätzt wird, wie es hier mit der Matrix LSQ . Bei der Parameteridentifikation hingegen ist ein flugmechanisches Modell bekannt, in dem Parameter gesucht werden.
 
 \section{\textit{Least Squares}-Methode}
 In diesem Kapitel wird die Methode der kleinsten Fehlerquadrate (\textit{Least Squares}, LSQ) vorgestellt.
@@ -95,8 +95,63 @@ Wie schon in dem letzten Abschnitt erwähnt, wird es nach einem geschätzten Par
     \hat{x}= {({H_L}^{T} {H_L})}^{-1} \cdot {H_L}^{T} z_L 
 \end{equation}
 
+
+\section{Schätzung mit Matrix-LSQ}
+
+Bei der Matrix-LSQ Methode wird, im Gegensatz zur klassischen LSQ Schätzung, sowohl die Systemmatrix \textbf{A} wie auch die Eingangsmatrix \textbf{B} als unbekannt angesehen. Es handelt sich somit um eine Systemidentifikation im eigentlichen Sinn, da keine flugmechanischen Modelle verwendet werden.
+
+\subsection{Modellgleichung}
+
+Messdaten der Eingänge $\textbf{u}$, des Zustands  $\textbf{x}$ und der Zustandsableitung $\dot{\textbf{x}}$ werden in die Form von Gl. \ref{eq:matrixLSQ} gebracht. 
+
+\begin{equation}
+    \underbrace{\begin{pmatrix}
+        \dot{x}_1^T \\
+        . \\
+        . \\
+        \dot{x}_n^T 
+    \end{pmatrix}}_{\textbf{z}} =
+    \underbrace{\begin{pmatrix}
+        x_{1}^T& u_{1}^T \\
+        . & .  \\
+        . & .  \\
+        x_{n}^T & u_{n}^T \\
+    \end{pmatrix}}_{\textbf{H}}
+    \underbrace{\begin{pmatrix}
+        \textbf{A}^T \\
+        \textbf{B}^T
+    \end{pmatrix}}_{\hat{\textbf{x}}} +
+    \begin{pmatrix}
+        v_1^T \\
+        . \\
+        . \\
+        v_n^T
+    \end{pmatrix}
+\end{equation}\label{eq:matrixLSQ}
+
+\begin{tabular}[\textwidth]{l l}
+
+$\textbf{z}$ & Messmatrix \\
+$\textbf{H}$ & Modellmatrix \\
+$\hat{\textbf{x}}$ & Schätzwertmatrix \\
+$\textbf{v}$ & Störgrößenmatrix \\
+$n$ & Anzahl der Zeitschritte \\
+\end{tabular}
+
+Die Dimension der Systemmatrix und der Eingangsmatrix werden von den Dimensionen von $\textbf{u}$,  $\textbf{x}$ und $\dot{\textbf{x}}$ vorgegeben. Hier liegt auch der Nachteil der Matrix-LSQ Methode. Es ist nicht möglich die einzelnen Parameter innerhalb der Matrizen zu beeinflussen oder Wertebereiche vorzugeben.
+
+
+\subsection{Schätzgleichung}
+
+Nach der Herleitung in \cite{Mandry2021} ergibt sich die Schätzgleichung zu:
+
+\begin{equation*}
+    \hat{\textbf{x}} = (\textbf{H}^T \textbf{H})^{-1}\textbf{H}^T\textbf{z}
+\end{equation*}
+
+Besonders hervorzuheben ist hier die Inversion der Matrix $\textbf{H}^T \textbf{H}$. Es handelt sich dabei um eine Matrix der Dimension (dim(\textbf{x})+dim(\textbf{u}))x(dim(\textbf{x})+dim(\textbf{u})). In dieser Arbeit bedeutet das konkret 6x6, womit der Rechenaufwand für die, für große Matrizen aufwändige, Inversion klein bleibt.
  
- \section{Ergebnisse}
+\section{Ergebnisse}
  
 Anschließend werden die Ergebnisse in diesem Kapitel kurz vorgestellt.
 
@@ -135,19 +190,17 @@ In \cref{fig:Ergebnisse_zmlsq} wird die Lösung anhand des Matrix-LSQ-Verfahrens
 	\end{pmatrix}
  \nonumber
 \end{equation}
-Die Ergebnisse in \cref{fig:Ergebnisse_zmlsq} zeigen eine relativ präzise Approximation. Allerdings weist das Ergebnis in flugmechanischer 
-Hinsicht Abweichungen in System- und Eingangsmatrix auf. Der Betrag der Einträge der ersten und vierten Spalten von $A_L$ unterscheiden sich stark voneinander ($-0.1940$ und $0.4433$) und ($-0.0002$ und $0.0023$). Eine Starke Abweichung ist auch zwischen die vierten Spalten der Matrizen $A_L$ und $A$.  
+Die Ergebnisse in \cref{fig:Ergebnisse_zmlsq} zeigen eine relativ präzise Approximation, das Modell liefert vor Allem für Anstellwinkel und Geschwindigkeit gute Ergebnisse. Auch die Ergebnisse für q und den Bahnwinkel sind sinnvoll, durch die wenig aussagekräftigen Messdaten aber schwer zu vergleichen. Allerdings weist das Ergebnis in flugmechanischer Hinsicht Abweichungen in System- und Eingangsmatrix auf. Der Betrag der Einträge der ersten und vierten Spalten von $A_L$ unterscheiden sich stark voneinander ($-0.1940$ und $0.4433$) und ($-0.0002$ und $0.0023$). Eine Starke Abweichung ist auch zwischen die vierten Spalten der Matrizen $A_L$ und $A$.  
 
- 
-\cref{fig:Ergebnisse_zlsq} zeigt die Lösung anhand des LSQ-Verfahrens. Die Methode liefert keine sonderlich guten Ergebnisse. Der Simulator kann keine stabilen Werten generieren. 
-
-\todo{warum schlechte Ergebnisse? : Adam : ich weiß nicht warum?}
+%\todo{warum schlechte Ergebnisse? : Adam : ich weiß nicht warum?}
 \begin{figure}[h!]
 	\centering
 	\includegraphics[trim=100 0 100 0,clip,width=1\linewidth]{LS.png}
 	\caption{Ergebnisse anhand des Matrix-LSQ-Verfahrens}
     \label{fig:Ergebnisse_zmlsq}
 \end{figure}
+
+\cref{fig:Ergebnisse_zlsq} zeigt die Lösung anhand des LSQ-Verfahrens. Die Methode liefert kein sinnvolles Ergebnisse. Der Simulator kann keine stabilen Werten generieren.
 
  \begin{figure}[h!]
 	\centering
@@ -156,5 +209,14 @@ Hinsicht Abweichungen in System- und Eingangsmatrix auf. Der Betrag der Einträg
      \label{fig:Ergebnisse_zlsq} 
 \end{figure}
 
-\todo{Diagramme gut lesbar?}
 
+\section{Interpretation}
+
+Die wesentliche Erkenntnis der Analyse im Zeitbereich ist, dass es nicht möglich ist die Parameter des linearen Modells für die Seitenbewegung so zu bestimmen, dass eine stabile Simulation möglich ist.
+
+Eine Interpretation dafür ist, dass mithilfe der Matrix-LSQ Effekte übertragen werden, die vom linearen Modell vernachlässigt werden. Die in Kap. \ref{chapter:Modell} beschriebenen Vereinfachungen sind hier ein guter Ansatz. Besonders ist es möglich, dass der Wind und der Auftrieb durch die Nickrate eine relevante Rolle spielt. 
+%Gerade die Elemente A[1,4] und A[2,4] sprechen dafür, weil durch diese der Bahnwinkel auf die Änderung des Anstellwinkels übertragen wird. 
+
+Dass Element $\textbf{A}_L[1,4]$ nicht null ist spricht für einen Einfluss des Windes, weil somit $\Delta \gamma = \Delta \theta- \Delta \alpha$ nicht mehr gilt. Der Bahnwinkel hat somit einen Einfluss auf den Anstellwinkel.
+
+Eine weitere Untersuchung und eine Betrachtung der Bedingungen beim Flugversuch sind hier notwendig, um eine fundierte Aussage zu treffen.
