Korrekturen, Anhang hinzugefügt

--- a/0a_Abschlussbericht/src/bibfile.bib
+++ b/0a_Abschlussbericht/src/bibfile.bib
@@ -44,7 +44,7 @@
 	author = {Julius S. Bendat and Allan G. Piersol},
 	year = {1986},
 	title = {Random Data: Analysis and Measurement Procedures},
-	publisher = {John Wiley & Sons, Inc.},
+	publisher = {John Wiley \& Sons, Inc.},
 	isbn = {0-471-04000-2}
 }
 
