--- a/0a_Abschlussbericht/src/vorbereitung.tex
+++ b/0a_Abschlussbericht/src/vorbereitung.tex
@@ -138,7 +138,7 @@ gut zu sehen.
 \subsection{Ablauf}
 Für das Filter wird eine Übertragungsfunktion $f(s)$ auf die Messdaten vorwärts 
 angewandt, die Messdaten umgekehrt und die selbe Übertragungsfunktion noch 
-einmal verwendet. In Matlab ist diese Vorgehensweise in der Funktion \textit{filtfilt()} 
+einmal verwendet. In Matlab ist diese Vorgehensweise in der Funktion \texttt{filtfilt()} 
 bereits implementiert. 
 
 
