--- a/0a_Abschlussbericht/Main.tex
+++ b/0a_Abschlussbericht/Main.tex
@@ -11,6 +11,9 @@
 \pgfplotsset{compat=1.16}
 \usepackage{tikz}
 \usetikzlibrary{plotmarks,shapes,arrows.meta,decorations.markings,patterns,calc}
+% Zum flexiblen Einbinden von Grafiken in .svg Format
+\usepackage{svg}
+\svgsetup{inkscape=false}
 
 %Units
 \usepackage{siunitx}
@@ -21,7 +24,8 @@
 \geometry{verbose,a4paper,tmargin=3.5cm,bmargin=2.5cm,lmargin=2.6cm,rmargin=2.6cm,headheight=40pt,headsep=1cm}
 \usepackage[headsepline= 0.4pt]{scrlayer-scrpage}
 \pagestyle{scrheadings}
-\clearscrheadfoot
+\clearscrheadfoot % deprecated
+%\clearpairofpagestyles
 \ohead{  \normalfont \sffamily \bfseries \small Universität Stuttgart \\[2pt] Institut für Flugmechanik und Flugregelung  \\[8pt] \normalfont\sffamily\footnotesize{Prof. Dr.-Ing. Walter Fichter}\\[-37pt] }
 \lohead{ \includegraphics[scale=0.4, trim= -0.0cm 0.05cm 0cm 0cm] {./src/pics/logo/ifrlogo.pdf} \vspace{0.05cm}}
 \cfoot[\pagemark]{}
@@ -82,8 +86,6 @@
 %Titlepage
 \input{./src/00_title.tex}
 
-\listoftodos
-\thispagestyle{empty}
 
 %Table of contents
 \tableofcontents
@@ -101,5 +103,9 @@
 \addcontentsline{toc}{chapter}{Literaturverzeichnis}
 \bibliographystyle{abbrvdin}
 \bibliography{./src/bibfile}
+
+% Anhang
+\appendix
+\input{./src/appendix_test_algorithmus}
 
 \end{document}
