--- a/0a_Abschlussbericht/src/00_title.tex
+++ b/0a_Abschlussbericht/src/00_title.tex
@@ -2,6 +2,7 @@
 % Titelseite
 %********************************
 \section*{
+\thispagestyle{empty}
 \vspace{4.5cm}
 {\LARGE \\ 
 Aerobotics-Seminar  \\
